# perfect-hashing

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Taskfile.yml  conanfile.py  gloss.hpp
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/gloss/: gloss.hpp  random.hpp
test/: CMakeLists.txt  gloss_test.cpp
test/source/: gloss_test.cpp
